--- a/src/components/TodoList/TodoList.module.css
+++ b/src/components/TodoList/TodoList.module.css
@@ -1,10 +1,6 @@
-
-
-.todoList
-  {display: grid;
+.todoList {
+  display: grid;
   list-style: none;
   padding: 0;
-  margin: 0;}
-
-
-
+  margin: 0;
+}
