--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: lightgrey;
 }
 
 code {
@@ -17,4 +18,5 @@ code {
 h1, h2, h3, h4, h5, h6, p, ul {
   margin: 0;
   padding: 0;
+  color: white;
 }
