--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: lightgrey;
+}
+
+* {
   box-sizing: border-box;
 }
 
@@ -17,7 +20,14 @@ code {
     monospace;
 }
 
-h1, h2, h3, h4, h5, h6, p, ul {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
   margin: 0;
   padding: 0;
   color: white;
